#
#
#

bin_PROGRAMS = killit \
	signalonread \
	signalonfutex \
	simultaneousterm \
	signalonfork \
	stackcorruption

signalonread_SOURCES = signalonread.c
signalonread_LDFLAGS = -lpthread

signalonfutex_SOURCES = signalonfutex.c
signalonfutex_LDFLAGS = -lpthread

simultaneousterm_SOURCES = simultaneousterm.c
simultaneousterm_LDFLAGS = -lpthread

signalonfork_SOURCES = signalonfork.c
signalonfork_LDFLAGS = -lpthread

stackcorruption_SOURCES = stackcorruption.c
stackcorruption_LDFLAGS = -lpthread
